# ChangeLog for media-plugins/quodlibet-trayicon
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-plugins/quodlibet-trayicon/ChangeLog,v 1.6 2007/03/29 08:22:03 corsair Exp $

  29 Mar 2007; Markus Rothe <corsair@gentoo.org>
  quodlibet-trayicon-3493.ebuild:
  Added ~ppc64; bug #172367

  19 Mar 2007; Bryan Østergaard <kloeri@gentoo.org> metadata.xml:
  Remove tcort from metadata.xml due to retirement.

  16 Jul 2006; Jason Wever <weeve@gentoo.org>
  quodlibet-trayicon-3493.ebuild:
  Added ~sparc keyword wrt bug #139869.

  16 Jul 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  quodlibet-trayicon-3493.ebuild:
  Added ~ppc, bug #139869

  10 Jul 2006; Thomas Cort <tcort@gentoo.org>
  quodlibet-trayicon-3493.ebuild:
  Added ~alpha keyword.

*quodlibet-trayicon-3493 (09 Jul 2006)

  09 Jul 2006; Thomas Cort <tcort@gentoo.org> +metadata.xml,
  +quodlibet-trayicon-3493.ebuild:
  Initial Commit. Ebuild by Kai Huuhko <kai.huuhko@gmail.com> and Thomas Cort
  <tcort@gentoo.org>.
