@@ -1,4 +1,4 @@
-DIST quodlibet-trayicon-3493.py.bz2 3745 RMD160 27a2750792ddb9c9b2c5f4a42be683a5210e4ab3 SHA1 50a49c7e89e2912bb1596ee94e2c1c7e0adb401b SHA256 dfb347b4d46edb614302bcac674e984c8756f00bcda7166ab6e15785cd08292e
-EBUILD quodlibet-trayicon-3493.ebuild 1067 RMD160 9e1e1418c0c12a80ab33a614a89ff07c7c968989 SHA1 50069877bfbbc5e80673c3e874ab6fcde7d78cad SHA256 caa5f732fdbcbf3c0eae562b3e285ac1489cb439cbb6ef6cb79eb63e45b26e7e
-MISC ChangeLog 1050 RMD160 b54a3729c612198b91cebbb334a0be17a6a620b6 SHA1 45dd845297ef94109f1cd995b6c92fba4c011cc3 SHA256 f328d80afcc928ceacfe633f7bf966504b9d955322ed723971a384ed7e26787d
+DIST quodlibet-trayicon-4351.tar.bz2 4049 RMD160 f2bbf9407dfc5d449da45f6dc14481cb87273f48 SHA1 025f3d8c2234008aa82065643951b2d429b3ddc7 SHA256 650ebe3b09a1709f8e5c2da97e4c0edd28ea3cfba0a2e613aa147307af8e113f
+EBUILD quodlibet-trayicon-4351.ebuild 907 RMD160 c484b493f65695eb881d5ce9b4e3191461648281 SHA1 f7fb1403476fdb0372c7bc64e8712c265849fbb1 SHA256 897ec7dd14ac04558df032d68be1390332c83c4f7b6e6149060475f4203e18f0
+MISC ChangeLog 1264 RMD160 72cbd1c47f40a78e005594e6c5b8d45c9d5d015d SHA1 a6e55f443239532c5c3b96b9b46c34251406ce89 SHA256 17670e394836a2650085f6db566eb4187f786cc392d836e9d1d5da9f912c09d8
 MISC metadata.xml 158 RMD160 6842e2189a50bd8a98e84802c38180ac1421c00e SHA1 703cea5a2109d41f7c87993c1f01d418a4c85174 SHA256 dfb5b47e6836db39fb187301dfcff1c2605e91d13d21db160806a563d8c75f9b
