@@ -1,6 +1,12 @@
 # ChangeLog for media-plugins/quodlibet-trayicon
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/quodlibet-trayicon/ChangeLog,v 1.6 2007/03/29 08:22:03 corsair Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/quodlibet-trayicon/ChangeLog,v 1.7 2009/05/12 13:09:28 ssuominen Exp $
+
+*quodlibet-trayicon-4351 (12 May 2009)
+
+  12 May 2009; Samuli Suominen <ssuominen@gentoo.org>
+  -quodlibet-trayicon-3493.ebuild, +quodlibet-trayicon-4351.ebuild:
+  Version bump wrt #220705, #254229 and #237578.
 
   29 Mar 2007; Markus Rothe <corsair@gentoo.org>
   quodlibet-trayicon-3493.ebuild:
